<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/AppTheme2"
    android:background="@color/blueaccent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ic_wave"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signUp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/open_sans"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="10dp"
            android:text="User type"
            android:textColor="@color/black"
            android:id="@+id/userheader"
            android:visibility="visible"
            android:textStyle="bold"
            android:fontFamily="@font/open_sans"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:id="@+id/radio"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:backgroundTint="@color/green"
            android:outlineAmbientShadowColor="@color/green"
            android:outlineSpotShadowColor="@color/green"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/bloodcamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blood camp"
                android:fontFamily="@font/open_sans"
                android:checked="true"
                android:buttonTint="@color/black"
                android:drawableTint="@color/green"
                android:backgroundTint="@color/green"
                android:foregroundTint="@color/green"
                android:onClick="onUserClicked"/>
            <RadioButton android:id="@+id/donor"
                android:layout_width="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="Donor"
                android:onClick="onUserClicked"/>
        </RadioGroup>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/overlay"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/fullName"
                    android:inputType="textCapWords"
                    android:drawableLeft="@drawable/overlay"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white" />


                <EditText
                    android:id="@+id/userEmailId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:background="@drawable/overlay"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/overlay"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/overlay"
                    android:background="@drawable/overlay"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/DOB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_baseline_calendar_month_24"
                    android:background="@drawable/overlay"
                    android:drawableLeft="@drawable/overlay"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Date of birth"
                    android:inputType="date"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/NIC"
                    android:layout_width="fill_parent"
                    android:fontFamily="@font/open_sans"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_baseline_featured_video_24"
                    android:background="@drawable/overlay"
                    android:drawableLeft="@drawable/overlay"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="NIC"
                    android:inputType="date"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="fill_parent"
                    android:fontFamily="@font/open_sans"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:background="@drawable/overlay"
                    android:drawableLeft="@drawable/overlay"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/location"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/city"
                    android:layout_width="fill_parent"
                    android:fontFamily="@font/open_sans"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_baseline_location_city_24"
                    android:background="@drawable/overlay"
                    android:drawableLeft="@drawable/overlay"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="city"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/open_sans"
                    android:textColorHint="@color/grey"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        style="@android:style/Widget.Holo.Light.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/overlay"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:ems="10"
                        android:hint=" Password"
                        android:inputType="textPassword"
                        android:fontFamily="@font/open_sans"
                        android:padding="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        app:passwordToggleEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="fill_parent"
                    android:drawableStart="@drawable/ic_baseline_check_box_24"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/overlay"
                    android:drawableLeft="@drawable/overlay"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button"
                    android:onClick="signin"
                    android:padding="3dp"
                    android:text="@string/signUp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/open_sans"
                    android:textStyle="bold" />
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:id="@+id/progress_bar"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>